[tool.poetry]
name = "finalproject-filippovich-m255-55"
version = "0.1.0"
description = "CLI application for virtual currency wallet and rate tracking"
authors = ["FilKa <vladislav_filippovich2@mail.ru>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
prettytable = "^3.10.0"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]
ruff = "^0.6.0"

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:run_cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.valutatrade]
DATA_DIR = "data"
USERS_FILE = "data/users.json"
PORTFOLIOS_FILE = "data/portfolios.json"
RATES_FILE = "data/rates.json"
HISTORY_FILE = "data/exchange_rates.json"

RATES_TTL_SECONDS = 300
DEFAULT_BASE_CURRENCY = "USD"

LOG_DIR = "logs"
ACTIONS_LOG_FILE = "logs/actions.log"
PARSER_LOG_FILE = "logs/parser.log"
LOG_LEVEL = "INFO"

PARSER_UPDATE_INTERVAL_SECONDS = 300

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
